@@ -7,6 +7,9 @@ Changelog
 
 - This Plone add-on now requires six >= 1.12.0. [mbaechtold]
 
+- The plone_upgrade subcommand does not break on Python3
+  Fixes `issue 202 <https://github.com/4teamwork/ftw.upgrade/issues/202>`. [ale-rt]
+
 
 3.0.0 (2020-03-23)
 ------------------
